@@ -7,7 +7,8 @@ constexpr auto NO_LOS_ITEM = INT_MAX;
 
 bool LOS(const GameVector* origin, GameVector* target);
 bool GetTargetOnLOS(GameVector* origin, GameVector* target, bool drawTarget, bool isFiring);
-int	 ObjectOnLOS2(GameVector* origin, GameVector* target, Vector3i* vec, MESH_INFO** mesh, GAME_OBJECT_ID priorityObject = GAME_OBJECT_ID::ID_NO_OBJECT);
+int	 ObjectOnLOS2(GameVector* origin, GameVector* target, Vector3i* vec, MESH_INFO** mesh, GAME_OBJECT_ID priorityObjectID = GAME_OBJECT_ID::ID_NO_OBJECT);
 bool LOSAndReturnTarget(GameVector* origin, GameVector* target, int push);
 
 std::optional<Vector3> GetStaticObjectLos(const Vector3& origin, int roomNumber, const Vector3& dir, float dist, bool onlySolid);
+std::pair<GameVector, GameVector> GetRayFrom2DPosition(Vector2 screenPos);
