@@ -259,8 +259,7 @@ namespace TEN::Entities::Creatures::TR3
 			TriggerDynamicLight(origin.x, origin.y, origin.z, 20, 0, 255, 255);
 
 			auto hitPos = Vector3i::Zero;
-			MESH_INFO* mesh = nullptr;
-			if (ObjectOnLOS2(&origin, &target, &hitPos, &mesh, ID_LARA) == creature.Enemy->Index)
+			if (ObjectOnLOS2(&origin, &target, &hitPos, nullptr, ID_LARA) == creature.Enemy->Index)
 			{
 				if (creature.Enemy->HitPoints <= PUNA_LIGHTNING_DAMAGE)
 				{
