@@ -10,6 +10,8 @@
 #include "Scripting/Internal/ReservedScriptNames.h"
 #include "Scripting/Internal/ScriptAssert.h"
 #include "Scripting/Internal/ScriptUtil.h"
+#include "Scripting/Internal/TEN/Objects/Moveable/MoveableObject.h"
+#include "Scripting/Internal/TEN/Objects/Static/StaticObject.h"
 #include "Scripting/Internal/TEN/Util/LevelLog.h"
 #include "Scripting/Internal/TEN/Vec2/Vec2.h"
 #include "Scripting/Internal/TEN/Vec3/Vec3.h"
@@ -39,10 +41,9 @@ namespace TEN::Scripting::Util
 		auto vector0 = posA.ToGameVector();
 		auto vector1 = posB.ToGameVector();
 
-		MESH_INFO* meshPtr = nullptr;
 		auto vector = Vector3i::Zero;
 		return (LOS(&vector0, &vector1) &&
-			ObjectOnLOS2(&vector0, &vector1, &vector, &meshPtr) == NO_LOS_ITEM);
+			ObjectOnLOS2(&vector0, &vector1, &vector, nullptr) == NO_LOS_ITEM);
 	}
 
 	///Calculate the distance between two positions.
@@ -129,6 +130,43 @@ namespace TEN::Scripting::Util
 		return std::make_tuple(resX, resY);
 	}
 
+	/// Pick a moveable by the given display position.
+	// @function PickMoveableByDisplayPosition
+	// @tparam Vec2 Display space position in percent.
+	// @treturn Objects.Moveable Picked moveable (nil if no moveable was found under the cursor).
+	static sol::optional <std::unique_ptr<Moveable>> PickMoveable(const Vec2& screenPos)
+	{
+		auto realScreenPos = PercentToScreen(screenPos.x, screenPos.y);
+		auto ray = GetRayFrom2DPosition(Vector2(int(std::get<0>(realScreenPos)), int(std::get<1>(realScreenPos))));
+
+		auto vector = Vector3i::Zero;
+		int itemNumber = ObjectOnLOS2(&ray.first, &ray.second, &vector, nullptr, GAME_OBJECT_ID::ID_LARA);
+
+		if (itemNumber == NO_LOS_ITEM || itemNumber < 0)
+			return sol::nullopt;
+
+		return std::make_unique<Moveable>(itemNumber);
+	}
+
+	/// Pick a static mesh by the given display position.
+	// @function PickStaticByDisplayPosition
+	// @tparam Vec2 Display space position in percent.
+	// @treturn Objects.Static Picked static mesh (nil if no static mesh was found under the cursor).
+	static sol::optional <std::unique_ptr<Static>> PickStatic(const Vec2& screenPos)
+	{
+		auto realScreenPos = PercentToScreen(screenPos.x, screenPos.y);
+		auto ray = GetRayFrom2DPosition(Vector2(int(std::get<0>(realScreenPos)), int(std::get<1>(realScreenPos))));
+
+		MESH_INFO* mesh = nullptr;
+		auto vector = Vector3i::Zero;
+		int itemNumber = ObjectOnLOS2(&ray.first, &ray.second, &vector, &mesh, GAME_OBJECT_ID::ID_LARA);
+
+		if (itemNumber == NO_LOS_ITEM || itemNumber >= 0)
+			return sol::nullopt;
+
+		return std::make_unique<Static>(*mesh);
+	}
+
 	/// Write messages within the Log file
 	//@advancedDesc
 	//For native Lua handling of errors, see the official Lua website:
@@ -162,6 +200,8 @@ namespace TEN::Scripting::Util
 		tableUtil.set_function(ScriptReserved_CalculateDistance, &CalculateDistance);
 		tableUtil.set_function(ScriptReserved_CalculateHorizontalDistance, &CalculateHorizontalDistance);
 		tableUtil.set_function(ScriptReserved_GetDisplayPosition, &GetDisplayPosition);
+		tableUtil.set_function(ScriptReserved_PickMoveable, &PickMoveable);
+		tableUtil.set_function(ScriptReserved_PickStatic, &PickStatic);
 		tableUtil.set_function(ScriptReserved_PercentToScreen, &PercentToScreen);
 		tableUtil.set_function(ScriptReserved_ScreenToPercent, &ScreenToPercent);
 		tableUtil.set_function(ScriptReserved_PrintLog, &PrintLog);
