@@ -32,8 +32,9 @@ Version 1.3
 Lua API changes:
 * Add Lara:GetInteractedMoveable() which returns currently interacted moveable by Lara.
 * Add Moveable:SetStatus() to set the current status of the moveable.
-* Add View:GetCameraPosition(), View:GetCameraTarget() and View:GetCameraRoom() functions.
 * Add Room:GetColor() to get room's ambient light color.
+* Add Util.PickMoveableByDisplayPosition() and Util.PickStaticByDisplayPosition() functions.
+* Add View.GetCameraPosition(), View.GetCameraTarget() and View:GetCameraRoom() functions.
 
 Version 1.2
 ===========
